# Credit-client

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: project_methodology.md
notebooks/: 01_exploration_credit_default.ipynb  02_cleaning.ipynb  03_modeling_baselines.ipynb  04_credit_loan_score.ipynb  05_probability_calibration.ipynb
reports/: Credit_Default_Risk_Scoring.pptx  eda_initial_findings.md
scripts/: 01_run_initial_eda.py
src/credit_default/: __init__.py  config.py  data.py  eda.py  modeling.py  preprocessing.py  scoring.py
tests/: test_data_contract.py  test_modeling.py  test_preprocessing.py  test_scoring.py
